2013-06-19  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* spawn.cc (child_info_spawn::worker): Eliminate call to newargv.set()
	in favor of conglomerated newargv.setup().  Let newargv.setup() decide
	when to call dup_all().  Only set argc and argv for cygwin processes.
	(av::setup): Rename from av::fixup.  Accept argc and argv parameters.
	Fill out argv and argc here.  Duplicate whole argv structure when this
	is a Cygwin executable.
	* winf.cc (linebuf::fromargv): Don't bother duplicating argv elements
	since they will never be used.
	* winf.h (av::set): Delete.
	(av::setup): Rename from av::fixup.  Add two parameters.
	(av::replace0_maybe): Assign calloced to 1 rather than 'true' for
	clarity.
	(av::dup_maybe): Delete.
	(av::dup_all): Set calloced to show that we have duplicated all of the
	arguments in the list.

2013-06-18  Corinna Vinschen  <corinna@vinschen.de>

	* nlsfuncs.cc (__collate_range_cmp): Convert input to wchar_t and call
	wcscoll since all calling functions are using wide chars.  Explain in
	preceeding comment.

2013-06-18  Corinna Vinschen  <corinna@vinschen.de>

	* spawn.cc (child_info_spawn::worker): Eliminate wascygexec.

2013-06-18  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* dcrt0.cc (child_info_fork::alloc_stack): Don't subtract 4096 from
	stack pointer since getstack() already does that.

2013-06-18  Corinna Vinschen  <corinna@vinschen.de>

	* gmon.c: Drop gratuitous inclusion of strings.h.  Remove __MINGW32__
	around definition of bzero.

2013-06-18  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (VPATH): Drop CONFIG_DIR.
	(EXTRA_DLL_OFILES): Remove.
	(DLL_OFILES): Remove EXTRA_DLL_OFILES.
	(ASFLAGS): Define as -D_WIN64 on x86_64.
	(GMON_OFILES): Add mcountFunc.o.
	($(srcdir)/$(TLSOFFSETS_H)): Use target_cpu rather than CONFIG_DIR.
	* configure.ac (CONFIG_DIR): Remove definition.
	* configure: Regenerate.
	* gcrt0.c: Use latest version from Mingw-w64 project.
	* gmon.c: Ditto.
	* gmon.h: Ditto.
	* mcount.c: Ditto.